// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Given a ColourwaySwiperDetails component should match the snapshot when all set to false 1`] = `
<DocumentFragment>
  <div>
    TEST saleSash
  </div>
</DocumentFragment>
`;

exports[`Given a ColourwaySwiperDetails component should match the snapshot when displayNewIn set to true 1`] = `
<DocumentFragment>
  .c0 {
  background-color: #000000;
  color: #ffffff;
  font-size: 0.6875rem;
  font-weight: 500;
  left: 0;
  -webkit-letter-spacing: 0.0313rem;
  -moz-letter-spacing: 0.0313rem;
  -ms-letter-spacing: 0.0313rem;
  letter-spacing: 0.0313rem;
  padding: 0.125rem 0.375rem;
  position: absolute;
  text-transform: uppercase;
  top: 0;
  white-space: nowrap;
  z-index: 20;
  font-family: "AzoSansMedium","Helvetica Neue",Arial,sans-serif;
  -webkit-text-decoration: none;
  text-decoration: none;
  max-width: 5.75rem;
  margin: 0rem;
}

<p
    class="MuiTypography-root c0 MuiTypography-body1"
  >
    new in
  </p>
  <div>
    TEST saleSash
  </div>
</DocumentFragment>
`;

exports[`Given a ColourwaySwiperDetails component should match the snapshot when displayNewIn, isOnSale set to true 1`] = `
<DocumentFragment>
  .c0 {
  background-color: #000000;
  color: #ffffff;
  font-size: 0.6875rem;
  font-weight: 500;
  left: 0;
  -webkit-letter-spacing: 0.0313rem;
  -moz-letter-spacing: 0.0313rem;
  -ms-letter-spacing: 0.0313rem;
  letter-spacing: 0.0313rem;
  padding: 0.125rem 0.375rem;
  position: absolute;
  text-transform: uppercase;
  top: 0;
  white-space: nowrap;
  z-index: 20;
  font-family: "AzoSansMedium","Helvetica Neue",Arial,sans-serif;
  -webkit-text-decoration: none;
  text-decoration: none;
  max-width: 5.75rem;
  margin: 0rem;
}

<p
    class="MuiTypography-root c0 MuiTypography-body1"
  >
    new in
  </p>
  <div>
    TEST saleSash
  </div>
</DocumentFragment>
`;

exports[`Given a ColourwaySwiperDetails component should match the snapshot when displayNewIn, isOnSale, showFitsIcons set to true 1`] = `
<DocumentFragment>
  .c0 {
  background-color: #000000;
  color: #ffffff;
  font-size: 0.6875rem;
  font-weight: 500;
  left: 0;
  -webkit-letter-spacing: 0.0313rem;
  -moz-letter-spacing: 0.0313rem;
  -ms-letter-spacing: 0.0313rem;
  letter-spacing: 0.0313rem;
  padding: 0.125rem 0.375rem;
  position: absolute;
  text-transform: uppercase;
  top: 0;
  white-space: nowrap;
  z-index: 20;
  font-family: "AzoSansMedium","Helvetica Neue",Arial,sans-serif;
  -webkit-text-decoration: none;
  text-decoration: none;
  max-width: 5.75rem;
  margin: 0rem;
}

<p
    class="MuiTypography-root c0 MuiTypography-body1"
  >
    new in
  </p>
  <div>
    TEST fitIcon
  </div>
  <div>
    TEST saleSash
  </div>
</DocumentFragment>
`;
